# pacmanager_wrapper

./: Cargo.toml  README.md
examples/: install.rs
src/: error.rs  lib.rs  pacmanager_exec.rs
src/compatability_layer/: apk.rs  apt.rs  mod.rs  pacman.rs  yum.rs
